// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar integration test should flow: bookmarks button click 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "key": "BOOKMARKS_MODELS",
          "url": "/api/bookmarks?search=controller%3Dmodels&per_page=all",
        },
        "type": "API_GET",
      },
    ],
  ],
  "state": Object {
    "API": Object {
      "BOOKMARKS_MODELS": Object {
        "payload": Object {
          "url": "/api/bookmarks?search=controller%3Dmodels&per_page=all",
        },
        "response": null,
        "status": "PENDING",
      },
    },
    "autocomplete": Object {
      "searchBar": Object {
        "controller": "models",
        "disabled": false,
        "error": null,
        "isErrorVisible": false,
        "results": undefined,
        "searchQuery": "result",
        "status": "PENDING",
        "trigger": "INPUT_CHANGE",
        "url": "model/auto_complete_search",
      },
    },
    "bookmarksPF4": Object {},
    "foremanModals": Object {
      "bookmarksModal-searchBar": Object {
        "isOpen": false,
        "isSubmitting": false,
      },
    },
  },
}
`;

exports[`SearchBar integration test should flow: in bookmarks dropdown: click on "bookmark this page" 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "controller": "models",
        "disabled": false,
        "error": null,
        "id": "searchBar",
        "isErrorVisible": false,
        "searchQuery": "",
        "status": "RESOLVED",
        "trigger": "COMPONENT_DID_MOUNT",
        "url": "model/auto_complete_search",
      },
      "type": "AUTO_COMPLETE_INIT",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "id": "bookmarksModal-searchBar",
        "isOpen": false,
        "isSubmitting": false,
      },
      "type": "ADD_MODAL",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "controller": "models",
        "id": "searchBar",
        "trigger": "CONTROLLER_CHANGED",
        "url": "model/auto_complete_search",
      },
      "type": "AUTO_COMPLETE_CONTROLLER_CHANGE",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "controller": "models",
        "error": null,
        "id": "searchBar",
        "searchQuery": "",
        "status": "PENDING",
        "trigger": "INPUT_CLEAR",
        "url": "model/auto_complete_search",
      },
      "type": "AUTO_COMPLETE_REQUEST",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "controller": "models",
        "error": null,
        "id": "searchBar",
        "searchQuery": "result",
        "status": "PENDING",
        "trigger": "INPUT_CHANGE",
        "url": "model/auto_complete_search",
      },
      "type": "AUTO_COMPLETE_REQUEST",
    },
  ],
  Array [
    Object {
      "key": "BOOKMARKS_MODELS",
      "payload": Object {
        "url": "/api/bookmarks?search=controller%3Dmodels&per_page=all",
      },
      "type": "BOOKMARKS_MODELS_REQUEST",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "key": "BOOKMARKS_MODELS",
        "url": "/api/bookmarks?search=controller%3Dmodels&per_page=all",
      },
      "type": "API_GET",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "id": "bookmarksModal-searchBar",
      },
      "type": "SET_MODAL_OPEN",
    },
  ],
]
`;
